[package]
name = "libg2c-sys"
version = "0.1.0"
authors = [ "Adam H" ]
build="build.rs"
edition = "2018"
description="Bindgen binding for NCEPLIBS-g2c"
license-file="LICENSE-g2c.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53.1"
cc = { version = "1.0", features = [ "parallel" ] }
pkg-config = "0.3"